--- a/src/app/(afterLogin)/layout.module.css
+++ b/src/app/(afterLogin)/layout.module.css
@@ -14,14 +14,25 @@
 .leftSection{
     width: 275px;
     height: 100dvh;
-}
+
+}   
+
 .leftSectionFixed{
     position: fixed;
     width:inherit;
     height: 100dvh;
     background-color: bisque;
+    display: flex;
+    flex-direction: column;
 
 }
+.leftSectionFixed nav{
+  flex: 1;
+ }
+ 
+ .leftSectionFixed nav li{
+     list-style-type: none;
+ }
 .logo{
     display: inline-block;
     height: 56px;
@@ -93,4 +104,24 @@
     padding: 12px;
     margin-left: 5px;
     font-size: 15px;
+}
+
+.postButton{
+  margin: 16px 0;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height: 52px;
+  box-shadow: rgba(0  , 0, 0, 0.08) 0px 8px 28px;
+  background-color: rgb(29,155,240);
+  width: 234px;
+  border: none;
+  color: rgb(255,255,255);
+  font-weight: 700;
+  font-size: 17px;
+  border-radius: 26px;
+}
+
+.postButton:hover{
+  background-color: rgb(26,140,216);
 }
