--- a/src/app/(afterLogin)/layout.module.css
+++ b/src/app/(afterLogin)/layout.module.css
@@ -21,7 +21,6 @@
     position: fixed;
     width:inherit;
     height: 100dvh;
-    background-color: bisque;
     display: flex;
     flex-direction: column;
 
@@ -62,7 +61,6 @@
 }
 
 .rightSectionInner{
-    background-color: aqua;
     height: 100%;
     width: 990px;
     display: flex;
@@ -70,13 +68,11 @@
 }
 
 .main{
-    background-color: aquamarine;
     width:600px;
     height: 1000dvh;
 }
 
 .rightSection{
-    background-color: blue;
     width: 350px;
     height: 100%;
 }
@@ -124,4 +120,18 @@
 
 .postButton:hover{
   background-color: rgb(26,140,216);
+}
+
+.followRecommend{
+  font-size: 20px;
+  font-weight: bold;
+  background-color: rgb(247,249,249);
+  border-radius: 16px;
+  margin: 12px 0;
+  padding: 12px 16px;
+
+}
+
+.followRecommend h3{
+  padding-bottom: 12px;
 }
